Migrate to Mantine's AppShell

--- a/resources/js/Components/UserButton/UserButton.module.css
+++ b/resources/js/Components/UserButton/UserButton.module.css
@@ -2,6 +2,7 @@
     display: block;
     width: 100%;
     padding: var(--mantine-spacing-md);
+    padding-top: 0;
     color: light-dark(var(--mantine-color-black), var(--mantine-color-dark-0));
 
     @mixin hover {
