Enhance entry display with feed details and improve layout responsiveness

--- a/resources/js/Pages/Feeds.module.css
+++ b/resources/js/Pages/Feeds.module.css
@@ -34,6 +34,10 @@
     background-color: #eaeaea;
 }
 
+.entryTitle {
+    word-break: break-word;
+}
+
 .mainLink {
     display: flex;
     align-items: center;
