Filter entries by feed from sidebar

--- a/resources/js/Pages/Feeds.module.css
+++ b/resources/js/Pages/Feeds.module.css
@@ -82,6 +82,7 @@
     padding-left: calc(var(--mantine-spacing-md) - 6px);
     padding-right: calc(var(--mantine-spacing-md) - 6px);
     padding-bottom: var(--mantine-spacing-md);
+    cursor: pointer;
 }
 
 .collectionsHeader {
