--- a/resources/js/Pages/Reader/Reader.module.css
+++ b/resources/js/Pages/Reader/Reader.module.css
@@ -1,6 +1,6 @@
 .main {
-    display: 'flex';
-    height: '100vh';
-    width: '100vw';
-    overflow: 'hidden';
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
 }
