--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,3 +6,11 @@ pre {
     white-space: pre-wrap;
     word-break: break-word;
 }
+
+
+/* https://dev.to/lennythedev/css-gotcha-how-to-fill-page-with-a-div-270j */
+html,
+body {
+  margin: 0 !important;
+  padding: 0 !important;
+}
