Add menu for each feed on sidebar

--- a/resources/js/Pages/Reader/Sidebar.module.css
+++ b/resources/js/Pages/Reader/Sidebar.module.css
@@ -87,3 +87,11 @@
         );
     }
 }
+
+.feedLinkDots {
+    &:hover {
+       color: light-dark(var(--mantine-color-gray-4), var(--mantine-color-dark-2));
+    }
+
+    margin-right: 5px;
+}
