Update Sidebar styles: adjust mainLinkBadge padding and add margin-left

--- a/resources/js/Pages/Reader/Sidebar.module.css
+++ b/resources/js/Pages/Reader/Sidebar.module.css
@@ -61,9 +61,9 @@
 }
 
 .mainLinkBadge {
-    padding: 1;
     min-width: fit-content;
     pointer-events: none;
+    margin-left: 5px;
 }
 
 .collectionLink {
