Add margin to feed menu icon in Sidebar

--- a/resources/js/Pages/Reader/Sidebar.module.css
+++ b/resources/js/Pages/Reader/Sidebar.module.css
@@ -66,6 +66,10 @@
     margin-left: 5px;
 }
 
+.feedMenuIcon {
+    margin-left: 11px;
+}
+
 .collectionLink {
     display: block;
     padding: 8px var(--mantine-spacing-xs);
