Update entrySummary styles to remove bottom padding

--- a/resources/js/Pages/Reader/CurrentEntryPane.module.css
+++ b/resources/js/Pages/Reader/CurrentEntryPane.module.css
@@ -15,6 +15,7 @@
 }
 
 .entrySummary {
+    padding-bottom: 0 !important;
     background-color: light-dark(
         var(--mantine-color-gray-1),
         var(--mantine-color-dark-9)
