Add styles to prevent video overflow in CurrentEntryPane

--- a/resources/js/Pages/Reader/CurrentEntryPane.module.css
+++ b/resources/js/Pages/Reader/CurrentEntryPane.module.css
@@ -13,6 +13,13 @@
         */
         height: auto;
     }
+
+    video {
+        /* override the default video size from the website to prevent stretching
+        */
+        width: 100%;
+        height: auto;
+    }
 }
 
 .entrySummary {
